--- a/support/index.html
+++ b/support/index.html
@@ -33,8 +33,7 @@ shortcuts:
       text: Contribute to the project
   - title: Want to use AIPs for your organization?
     description: |
-      AIPs are designed to be useful outside of Google. Take a look at how you
-      might choose which AIPs are best suited to your API design needs.
+      Take a look at how you might choose which AIPs are best suited to your API design needs.
     button:
       href: /adopting
       text: Learn more
@@ -44,7 +43,7 @@ shortcuts:
       questions</a>. If you don't find an answer there, file an issue on our
       GitHub repository.
     button:
-      href: https://github.com/googleapis/aip/issues
+      href: https://github.com/michalwronski/michalwronski.github.io/issues
       text: Ask us on GitHub
 ---
 
@@ -69,7 +68,7 @@ shortcuts:
   <div class="aip-landing-content">
     <h1>Welcome</h1>
     <p>
-      AIPs are design documents that summarize Google's API design
+      AIPs are design documents that summarize API design
       decisions. They also provide a framework and system for others to
       document their own API design rules and practices.
     </p>
