--- a/support/index.html
+++ b/support/index.html
@@ -7,8 +7,8 @@ exclude_from_search: true
 css:
   - /assets/css/hero.css
 hero:
-  title: API Improvement Proposals
-  subtitle: Designs for API development
+  title: API Improvement Proposals - test site
+  subtitle: Designs for API development - test
   buttons:
     - text: Explore the AIPs
       href: /general
